# bbc-audio-rag-reith-lecture

./: .env.example  .gitignore  FEATURE_IDEAS.md  QUICKSTART.md  README.md  app.py  config.py  list_models.py  main.py  pyproject.toml  requirements.txt  test_installation.py
downloads/: 'Only Connect...'.json  1. Freedom of Speech.json  1. The Future of Democracy.json  1816, the Year Without a Summer.json  1848_ Year of Revolution.json  2. Freedom of Worship.json  2. Rhyddid i Addoli.json  2. The Future of Security.json  3. Freedom from Want.json  3. The Future of Solidarity.json  4. Freedom from Fear.json  4. The Future of Prosperity.json  A Burning Fire.json  A Changing Reality.json  A Cherishing Bureaucracy.json  A Child of the Moment.json  A Christmas Carol.json  A Civil Society In Embryo.json  A Clash of Cultures.json  A Common Ground.json  A Community of Communities.json  A Froth on Reality.json  A Great Power in Crisis.json  A Licence for Licence.json  A Message From Our Ancestors.json  A Midsummer Night's Dream.json  A New Commandment - Human Rights.json  A New Politics of the Common Good.json  A Philosophy of Boredom.json  A Quest for Dignity.json  A Room of One's Own.json  A Talent For Conviction.json  A Web Of Deceit.json  A Web Of Words.json  A Web Of Worries.json  AI in the economy.json  AI in warfare.json  AI_ A Future for Humans.json  Abelard and Heloise.json  Absolute Zero.json  (+1341 more)
src/chat/: chat_engine.py  vector_store.py
svelte-migration/: MIGRATION_PLAN.md  QUICKSTART.md  README.md  backend-structure.md  frontend-structure.md  setup-frontend.sh
(+21 files in other folders)
